<?xml version="1.0"?>
<package format="2">
  <name>hw2_u2210189</name>
  <version>0.0.0</version>
  <description>HW2 TurtleBot3 digit formation in Gazebo</description>

  <maintainer email="raxmatovtemur8@gmail.com">Temur Raxmatov</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
  </export>
</package>